--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -73,12 +73,22 @@
       color: $color-primary;
       border: none;
 
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+
       @media only screen and (max-width: $bp-medium) {
         font-size: 2rem;
       }
 
       @media only screen and (max-width: $bp-smaller) {
         font-size: 1.5rem;
+      }
+
+      @media only screen and (max-width: $bp-smallest) {
+      //  display: flex;
+      //  align-items: center;
+      //  justify-content: space-between;
       }
     }
 
