--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -30,6 +30,10 @@ body {
   @media only screen and (max-width: $bp-small) {
     font-size: 2rem;
   }
+
+  @media only screen and (max-width: $bp-smallest) {
+    font-size: 1.4rem;
+  }
 }
 
 .heading-tertiary {
