--- a/sass/components/_section-top-bottom.scss
+++ b/sass/components/_section-top-bottom.scss
@@ -11,7 +11,7 @@
       border-bottom: .5rem solid $color-grey-light;
 
       @media only screen and (max-width: $bp-larger) {
-        -webkit-clip-path: polygon(0 14%, 100% 0%, 100% 100%, 0 84%);
+        -webkit-clip-path: polygon(0 30%, 100% 0%, 100% 100%, 0 100%);
         clip-path: polygon(0 30%, 100% 0%, 100% 100%, 0 100%);
       }
     }
@@ -40,6 +40,11 @@
 
       @media only screen and (max-width: $bp-smaller) {
         letter-spacing: 2px;
+      }
+
+      @media only screen and (max-width: $bp-smallest) {
+        letter-spacing: 1px;
+        font-size: .9rem;
       }
     }
   }
